Major update to match task description